# Tournament-builder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LinuxPackagingScript.py  README.md  appunti.txt  generalIncludes.h  io.github.alessandrodoradev.tournament-builder.appdata.xml.template  main_noiaFattaBene.cpp  matricesModule.cpp  matricesModule.h  myMacros.h  threadSafeTools.h
assets/: T1.csv  T1_rank_v2.csv  T2.csv  T2_rank.csv  T3.csv  T3_mod.csv  T3_mod_rank.csv  T3_polished.csv  T3_rank.csv
core-lib/: CMakeLists.txt
core-lib/implementation/: Colors.cpp  Config.cpp  TeamArray.cpp  TournamentBuilderAPI.cpp  TournamentConfig.cpp  globals.cpp  matricesModule.cpp  strat.cpp  to_strings.cpp
core-lib/include/: CSVRows.h  Colors.h  Config.h  MoveArrT.h  PlayerList.h  PseudoMatrix.h  Rank.h  TournamentConfig.h  globals.h  matricesModule.h  strat.h  to_strings.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  main_noiaFattaBene.cpp
src/implementation/: Config.cpp  TournamentBuilderAPI.cpp  TournamentBuilderGui.cpp  WindowsDefs.cpp  appImgDefs.cpp  core.cpp  globals.cpp  main.cpp  main_noiaFattaBene.cpp  matricesModule.cpp  strat.cpp  to_strings.cpp
src/implementation/hash/: VisitedConfigSetHash.cpp
src/implementation/less/: IDRankPairLess.cpp  RankLess.cpp  TeamSetLess.cpp
src/implementation/silly_strats/: funcs.cpp
src/include/: TournamentBuilderAPI.h  TournamentBuilderGui.h  WindowsDefs.h  appImgDefs.h  osMacro.h  profiling.h  small-gui-cpp.h
src/includes/: BaseID.h  BaseRank.h  Config.h  ConfigForMoveGen.h  ConfigMatrix.h  ConfigSet.h  IDRankPair.h  Instrumentor.h  MapForThreadMoles.h  MarkedConfigSet.h  MarkedTConfigSet.h  Move.h  MoveArrT.h  MoveGenConfigSet.h  MovePieceNBaseRankPair.h  MovePieceNRankPair.h  MovesSet.h  Player.h  PlayerBag.h  Rank.h  TeamArray.h  TeamForMoveGen.h  TeamMap.h  TeamSet.h  TeamToIntMap.h  TeamsMatrix.h  ValuedConfigSet.h  VisitedConfigSet.h  core.h  globals.h  matricesModule.h  to_strings.h
src/includes/hash/: VisitedConfigSetHash.h
src/includes/iterators/: ConstMultiHashSetIterator.h  MultiHashSetIterator.h
src/includes/less/: DereferencePtrLess.h  IDRankPairLess.h  MovesSetLess.h  MultiHashSetLess.h  RankLess.h  TeamForMoveGenLess.h  TeamSetLess.h
src/includes/macros/: myMacros.h
src/includes/silly_strats/: CircularRangeView.h  funcs.h
src/includes/thread_safe/: ThreadSafeUnorderedMultiset.h  ThreadSafeUnorderedSet.h
tests/: CMakeLists.txt  main_test.cpp  utils.cpp
tests/test_includes/: MultiHashSet.h  MultiHashSetL1.h  MultiHashSetL2.h  core.h  utils.h
